// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterOfCreditView SummaryOfTrade step renders 1`] = `
.c3 {
  list-style: none;
  margin: 0;
  padding: 30px 0px 30px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6.c6.c6.c6.c6 .field .selection.dropdown {
  width: 50% !important;
}

.c6.c6.c6.c6.c6 .field.error {
  margin-bottom: 0;
}

.c6.c6.c6.c6.c6 label.inputLabel {
  width: 200px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c5 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c2.c2.c2 {
  text-transform: uppercase;
  border: none;
  background-color: #f2f5f8;
}

.c8 {
  padding-bottom: 64px;
  overflow-y: auto;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  background: white;
  position: fixed;
  width: 200px;
  right: 0;
  top: 0;
  bottom: 0;
  padding-top: 38px;
  border-left: 1px solid #dbe5ec;
}

.c9 {
  position: relative;
}

.c1 {
  font-style: italic;
  margin-right: 20px;
}

.c0 {
  margin-bottom: 40px;
}

@media (min-width:68.75em) {
  .c3 {
    padding-left: 40px;
  }
}

@media (max-width:1250px) {
  .c8 {
    z-index: 13;
    right: -200px;
  }
}

@media (min-width:1251px) {
  .c7.c7.c7 {
    display: none;
  }
}

@media (max-width:1250px) {
  .c7.c7.c7 {
    position: absolute;
    right: 30px;
    top: 40px;
  }
}

@media (min-width:1251px) {
  .c0 {
    width: calc(100% - 200px);
  }
}

<section
  className="c0"
>
  <h1
    className="ui header"
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    LC application 
    LC18-MER-1
  </h1>
  <div>
    <span
      className="c1"
      data-test-id="lc-status"
    >
      Requested
    </span>
  </div>
  <div
    className="ui horizontal list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#5700b5",
          "fontWeight": "bold",
        }
      }
    >
      Summary of trade
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      Cargo movements
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      Participants
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      LC type
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      LC details
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      LC documents
    </div>
  </div>
  <div
    className="ui hidden divider"
  />
  <form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="accordion ui fluid"
      style={
        Object {
          "paddingTop": 0,
        }
      }
    >
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "paddingTop": 0,
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c2"
        >
          Trade data
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c3"
        >
          <li
            className="c4"
            data-test-id="header-text"
          >
            <span
              className="c5"
            >
              Trade source
            </span>
            Vakt
          </li>
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Buyer
            </span>
            
          </li>
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Buyer's reference
            </span>
            E222
          </li>
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Seller
            </span>
            
          </li>
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Credit requirement
            </span>
            Documentary letter of credit
          </li>
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Reference date
            </span>
            2018/10/29
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c2"
        >
          Commodity and price
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c3"
        >
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Commodity type
            </span>
            BFOET
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Invoice quantity
            </span>
            Load
          </li>
          <li
            className="c4"
          >
            <li
              className="c6 c4"
            >
              <span
                className="c5"
              >
                Quantity
              </span>
              600,000 BBL
            </li>
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Min tolerance
            </span>
            1.00%
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Max tolerance
            </span>
            1.00%
          </li>
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Price
               per
               
              unit
            </span>
            73.14 USD/BBL
          </li>
          <li
            className="c4"
          >
            <span
              className="c5"
            >
              Payment terms
            </span>
            30 calendar days from BL
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c2"
        >
          Contract data
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c3"
        >
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              General T&Cs
            </span>
            SUKO90
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Contract applicable law
            </span>
            English law
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c2"
        >
          Delivery terms
        </div>
      </div>
      <div
        className="content active"
      >
        <ul
          className="c3"
        >
          <li
            className="c4"
          >
            <li
              className="c6 c4"
            >
              <span
                className="c5"
              >
                Delivery from
              </span>
              2020/12/01
            </li>
          </li>
          <li
            className="c4"
          >
            <li
              className="c6 c4"
            >
              <span
                className="c5"
              >
                Delivery to
              </span>
              2020/12/31
            </li>
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Delivery term (incoterm)
            </span>
            FOB
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Delivery location
            </span>
            Weymouth
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Laytime
            </span>
            as per GT&Cs
          </li>
          <li
            className="c6 c4"
          >
            <span
              className="c5"
            >
              Demurrage terms
            </span>
            as per GT&Cs
          </li>
        </ul>
      </div>
      <div
        className="active title"
        onClick={[Function]}
        style={
          Object {
            "pointerEvents": "initial",
          }
        }
      >
        <div
          className="ui block header c2"
        >
          Documentary requirements
        </div>
      </div>
      <div
        className="content active"
      >
        <div
          className="ui list"
          role="list"
          style={
            Object {
              "padding": "10px",
            }
          }
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c5"
            >
              Bill of lading
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c5"
            >
              Certificate of origin
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c5"
            >
              Quality and quantity report
            </span>
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            <span
              className="c5"
            >
              Certificate of insurance
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="ui divider"
    />
    <div
      className="ui basic right aligned segment"
    >
      <button
        className="ui button"
        name="next"
        onClick={[Function]}
        role="button"
        type="button"
      >
        Next
      </button>
    </div>
  </form>
  <button
    className="ui small button c7"
    onClick={[Function]}
    role="button"
  >
    History
  </button>
  <aside
    className="c8"
    open={false}
  >
    <div
      className="c9"
    >
      <div />
    </div>
  </aside>
</section>
`;

exports[`LetterOfCreditView renders without data 1`] = `
.c3 {
  padding-bottom: 64px;
  overflow-y: auto;
  -webkit-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
  background: white;
  position: fixed;
  width: 200px;
  right: 0;
  top: 0;
  bottom: 0;
  padding-top: 38px;
  border-left: 1px solid #dbe5ec;
}

.c4 {
  position: relative;
}

.c1 {
  font-style: italic;
  margin-right: 20px;
}

.c0 {
  margin-bottom: 40px;
}

@media (max-width:1250px) {
  .c3 {
    z-index: 13;
    right: -200px;
  }
}

@media (min-width:1251px) {
  .c2.c2.c2 {
    display: none;
  }
}

@media (max-width:1250px) {
  .c2.c2.c2 {
    position: absolute;
    right: 30px;
    top: 40px;
  }
}

@media (min-width:1251px) {
  .c0 {
    width: calc(100% - 200px);
  }
}

<section
  className="c0"
>
  <h1
    className="ui header"
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    LC application 
    LC18-MER-1
  </h1>
  <div>
    <span
      className="c1"
      data-test-id="lc-status"
    >
      Requested
    </span>
  </div>
  <div
    className="ui horizontal list"
    role="list"
  >
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#5700b5",
          "fontWeight": "bold",
        }
      }
    >
      Summary of trade
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      Cargo movements
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      Participants
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      LC type
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      LC details
    </div>
    <div
      className="item"
      onClick={[Function]}
      role="listitem"
      style={
        Object {
          "color": "#1c2936",
          "cursor": "pointer",
          "fontWeight": "bold",
        }
      }
    >
      LC documents
    </div>
  </div>
  <div
    className="ui hidden divider"
  />
  <form
    className="ui form"
    onSubmit={[Function]}
  >
    <div />
    <div
      className="ui divider"
    />
    <div
      className="ui basic right aligned segment"
    >
      <button
        className="ui button"
        name="next"
        onClick={[Function]}
        role="button"
        type="button"
      >
        Next
      </button>
    </div>
  </form>
  <button
    className="ui small button c2"
    onClick={[Function]}
    role="button"
  >
    History
  </button>
  <aside
    className="c3"
    open={false}
  >
    <div
      className="c4"
    >
      <div />
    </div>
  </aside>
</section>
`;
